ory-selfservice/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ory-selfservice
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: ory-selfservice
  template:
    metadata:
      labels:
        app: ory-selfservice
    spec:
      containers:
        - name: ory-selfservice
          image: backendd/dita.ory-selfservice-rust:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 0m
              memory: 0Mi
