ory-selfservice/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ory-selfservice
  labels:
    app: ory-selfservice
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: ory-selfservice
