ory-selfservice/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ory-selfservice
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web.login.outi.ir
      secretName: ory-selfservice-tls
  rules:
    - host: web.login.outi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ory-selfservice
                port:
                  name: http
